# cmake-hls

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake/: CMakeLists.txt  enable_property.cmake  find_sycl.cmake  find_vitis.cmake  sycl.cmake  vitis.cmake
cmake/options/: hls_opt_options.cmake  hls_opt_passes.cmake  ir_downgrade_options.cmake  ir_downgrade_passes.cmake
demo/: CMakeLists.txt  adder.cpp  adder_tb.cpp
